﻿2020/01/27
- Added BISC.Resources folder to installer.
- Moved BasicConfiguration.xml file to BISC.Resources folder.
- Added CHANGELOG.txt file to BISC.Resources folder.

- Change connection logik: if conflicts not exists, "KIT" replace device in the project to loaded device.
- Solved problem with device disconnect for loading cancellation on conflict resolving tree item.
- Excluded trigger options, optional fields and integrity period in report control for model comparison. 
This fields will not make conflicts if different.

2020/01/28
- Excluded goose control max and min times from model comparison.

2020/02/06
- Refactoring project structure for goose. Made goose module more losse coupling.
- Refactoring project structure for report control. Made report module more losse coupling.

2020/03/18
- Added command for getting DOI values.
- Added command for writing db, zeroDb DAI values.

2020/03/19
- Added command to write all changed db and zeroDb