@@ -7,17 +7,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" MinWidth="650" MinHeight="350">
     <ContentControl Style="{DynamicResource BlockedContentStyle}">
-    <Grid>
+        <Grid>
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-
-        </Grid.RowDefinitions>
-        <TextBlock Margin="5" Style="{StaticResource MaterialDesignSubheadingTextBlock}" Text="Результаты сопоставления"></TextBlock>
-        <ItemsControl Grid.Row="1" ItemsSource="{Binding DeviceConflictViewModels}">
-            <ItemsControl.ItemTemplateSelector>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <TextBlock Margin="5" Style="{StaticResource MaterialDesignSubheadingTextBlock}" Text="Результаты сопоставления"/>
+            <ItemsControl Grid.Row="1" ItemsSource="{Binding DeviceConflictViewModels}">
+                <ItemsControl.ItemTemplateSelector>
                     <local:ConflictDataTemplateSelector>
                         <local:ConflictDataTemplateSelector.DatatemplateForAutoConflict>
                             <DataTemplate>
@@ -30,17 +30,35 @@
                             </DataTemplate>
                         </local:ConflictDataTemplateSelector.DatatemplateForManualConflict>
                     </local:ConflictDataTemplateSelector>
-            </ItemsControl.ItemTemplateSelector>
-        </ItemsControl>
-        <Grid Grid.Row="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-            <Button Margin="5" Content="Применить" Command="{Binding ApplyCommand}" IsEnabled="{Binding IsApplyButtonEnabled}"></Button>
-            <Button Grid.Column="1" Margin="5" Content="Отмена" Command="{Binding CancelCommand}"></Button>
+                </ItemsControl.ItemTemplateSelector>
+            </ItemsControl>
+            <Grid Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Выбрать всё из устройства" TextAlignment="Center" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
+                <Button Grid.Row="0" Width="30" Padding="5" Height="26" Grid.Column="1" Command="{Binding TakeAllFromDeviceCommand}">
+                    <ContentControl Width="20" Height="20" ContentTemplate="{DynamicResource DownloadIcon}"/>
+                </Button>
+                <TextBlock Text="Выбрать всё из проекта" TextAlignment="Center" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
+                <Button Grid.Row="1"  Width="30" Padding="5" Height="26" Grid.Column="1" Command="{Binding TakeAllFromProjectCommand}">
+                    <ContentControl Width="20" Height="20" ContentTemplate="{DynamicResource UploadIcon}"/>
+                </Button>
+            </Grid>
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Button Margin="5" Content="Применить" Command="{Binding ApplyCommand}" IsEnabled="{Binding IsApplyButtonEnabled}"></Button>
+                <Button Grid.Column="1" Margin="5" Content="Отмена" Command="{Binding CancelCommand}"></Button>
 
-        </Grid>
+            </Grid>
         </Grid>
     </ContentControl>
 </UserControl>
